zmiana linkow i contact.php strony

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Generalne <span>wykonawstwo inwestycji</span></h2>
               <p>Zoptymalizujemy koszty inwestycji. Dzięki generalnemu wykonawstwu wynegocjujemy nalepsze ceny usług oraz materiałów budowlanych.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
+              <div class="text-center"><a href="oferta.html" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
               <h2>Od projektu po realizację</h2>
               <p>Jako generalny wykonawca obsługujemy budownictwo przemysłowe i kubaturowe. Naszą specjalnością jest projektowanie i budowa hal przemysłowych, budowa magazynów, budowa zakładów produkcyjnych i obiektów biurowych na potrzeby
                 przedsiębiorstw działających w różnych sektorach gospodarczych.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
+              <div class="text-center"><a href="oferta.html" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Przygotujemy dla Ciebie indywidualną ofertę</h2>
               <p>Zajmiemy się znalezieniem odpowiedniego projektu oraz wykonawcy. Nasi specjaliści przygotują ofertę dopasowaną do Twoich potrzeb. </p>
-              <div class="text-center"><a href="" class="btn-get-started">Zobacz więcej</a></div>
+              <div class="text-center"><a href="oferta.html" class="btn-get-started">Zobacz więcej</a></div>
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
             <p> Świadczymy kompleksowe usługi, kltóre pozwalają szybko i sprawnie zrealizować każdą inwestycję budowlaną. Jako generalny wykonawca realizujemy wszystkie procesy niezbędne realizacji Państwa budowy.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Skontaktuj się</a>
+            <a class="cta-btn align-middle" href="kontakt.html">Skontaktuj się</a>
           </div>
         </div>
 
