--- a/kontakt.html
+++ b/kontakt.html
@@ -194,11 +194,11 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Przydatne linki</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">O nas</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Oferta</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="o-nas.html">O nas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Oferta</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="realizacje.html">Realizacje</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Kontakt</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kontakt.html">Kontakt</a></li>
               <br>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Ogólne warunki handlowe</a></li>
             </ul>
@@ -207,11 +207,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Oferta</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo przemysłowe</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Zaprojektuj i wybuduj</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo specjalistyczne i technologiczne</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Projektowanie</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Nadzór nad inwestycjami</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Budownictwo przemysłowe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Zaprojektuj i wybuduj</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Budownictwo specjalistyczne i technologiczne</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Projektowanie</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="oferta.html">Nadzór nad inwestycjami</a></li>
             </ul>
           </div>
 
