--- a/o-nas.html
+++ b/o-nas.html
@@ -264,10 +264,58 @@
             </div>
           </div>
 
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-9.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-10.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-11.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-12.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-13.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-14.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-15.png" class="img-fluid" alt="">
+  </div>
+</div>
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+  <div class="client-logo">
+    <img src="assets/img/clients/client-16.png" class="img-fluid" alt="">
+  </div>
+</div>
         </div>
 
       </div>
     </section><!-- End Our Clients Section -->
+
 
   </main><!-- End #main -->
 
