realizacje oraz index

--- a/realizacje.html
+++ b/realizacje.html
@@ -108,12 +108,11 @@
         <ul>
           
           <a class="is-active" href="#"><li>1</li></a>
-          <a href="#"><li>2</li></a>
-          <a href="#"><li>3</li></a>
-          <a href="#"><li>4</li></a>
-          <a href="#"><li>5</li></a>
-          <a href="#"><li>6</li></a>
-          <a href="#"><li>&#8594</li></a>
+          <a href="realizacje2.html"><li>2</li></a>
+          <a href="realizacje3.html"><li>3</li></a>
+          <a href="realizacje4.html"><li>4</li></a>
+          <a href="realizacje5.html"><li>5</li></a>
+          <a href="realizacje2.html"><li>&#8594</li></a>
         </ul>
 
   
@@ -125,47 +124,47 @@
           <div class="row" data-aos="fade-up">
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-1.jpg">
-                      <img src="assets/img/portfolio/portfolio-1.jpg" alt="Park">
+                      <img src="assets/img/portfolio/portfolio-1.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-2.jpg">
-                      <img src="assets/img/portfolio/portfolio-2.jpg" alt="Bridge">
+                      <img src="assets/img/portfolio/portfolio-2.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-12 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-3.jpg">
-                      <img src="assets/img/portfolio/portfolio-3.jpg" alt="Tunnel">
+                      <img src="assets/img/portfolio/portfolio-3.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-4.jpg">
-                      <img src="assets/img/portfolio/portfolio-4.jpg" alt="Coast">
+                      <img src="assets/img/portfolio/portfolio-4.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-5.jpg">
-                      <img src="assets/img/portfolio/portfolio-5.jpg" alt="Rails">
+                      <img src="assets/img/portfolio/portfolio-5.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-6.jpg">
-                      <img src="assets/img/portfolio/portfolio-6.jpg" alt="Traffic">
+                      <img src="assets/img/portfolio/portfolio-6.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-7.jpg">
-                      <img src="assets/img/portfolio/portfolio-7.jpg" alt="Rocks">
+                      <img src="assets/img/portfolio/portfolio-7.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-8.jpg">
-                      <img src="assets/img/portfolio/portfolio-8.jpg" alt="Benches">
+                      <img src="assets/img/portfolio/portfolio-8.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
                   <a class="lightbox" href="assets/img/portfolio/portfolio-9.jpg">
-                      <img src="assets/img/portfolio/portfolio-9.jpg" alt="Sky">
+                      <img src="assets/img/portfolio/portfolio-9.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
           </div>
