--- a/realizacje2.html
+++ b/realizacje2.html
@@ -106,14 +106,13 @@
 
       <div class="pagination p1 justify-content-center" data-aos="fade-up">
         <ul>
-          
-          <a class="is-active" href="#"><li>1</li></a>
-          <a href="#"><li>2</li></a>
-          <a href="#"><li>3</li></a>
-          <a href="#"><li>4</li></a>
-          <a href="#"><li>5</li></a>
-          <a href="#"><li>6</li></a>
-          <a href="#"><li>&#8594</li></a>
+          <a href="realizacje.html"><li>&#8592</li></a>
+          <a href="realizacje.html"><li>1</li></a>
+          <a class="is-active" href="#"><li>2</li></a>
+          <a href="realizacje3.html"><li>3</li></a>
+          <a href="realizacje4.html"><li>4</li></a>
+          <a href="realizacje5.html"><li>5</li></a>
+          <a href="realizacje3.html"><li>&#8594</li></a>
         </ul>
 
   
@@ -124,48 +123,48 @@
   
           <div class="row" data-aos="fade-up">
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-1.jpg">
-                      <img src="assets/img/portfolio/portfolio-1.jpg" alt="Park">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-11.jpg">
+                      <img src="assets/img/portfolio/portfolio-11.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-2.jpg">
-                      <img src="assets/img/portfolio/portfolio-2.jpg" alt="Bridge">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-12.jpg">
+                      <img src="assets/img/portfolio/portfolio-12.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-12 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-3.jpg">
-                      <img src="assets/img/portfolio/portfolio-3.jpg" alt="Tunnel">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-13.jpg">
+                      <img src="assets/img/portfolio/portfolio-13.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-4.jpg">
-                      <img src="assets/img/portfolio/portfolio-4.jpg" alt="Coast">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-14.jpg">
+                      <img src="assets/img/portfolio/portfolio-14.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-5.jpg">
-                      <img src="assets/img/portfolio/portfolio-5.jpg" alt="Rails">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-15.jpg">
+                      <img src="assets/img/portfolio/portfolio-15.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-6.jpg">
-                      <img src="assets/img/portfolio/portfolio-6.jpg" alt="Traffic">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-16.jpg">
+                      <img src="assets/img/portfolio/portfolio-16.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-7.jpg">
-                      <img src="assets/img/portfolio/portfolio-7.jpg" alt="Rocks">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-17.jpg">
+                      <img src="assets/img/portfolio/portfolio-17.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-8.jpg">
-                      <img src="assets/img/portfolio/portfolio-8.jpg" alt="Benches">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-18.jpg">
+                      <img src="assets/img/portfolio/portfolio-18.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-9.jpg">
-                      <img src="assets/img/portfolio/portfolio-9.jpg" alt="Sky">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-19.jpg">
+                      <img src="assets/img/portfolio/portfolio-19.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
           </div>
