--- a/realizacje4.html
+++ b/realizacje4.html
@@ -106,14 +106,13 @@
 
       <div class="pagination p1 justify-content-center" data-aos="fade-up">
         <ul>
-          
-          <a class="is-active" href="#"><li>1</li></a>
-          <a href="#"><li>2</li></a>
-          <a href="#"><li>3</li></a>
-          <a href="#"><li>4</li></a>
-          <a href="#"><li>5</li></a>
-          <a href="#"><li>6</li></a>
-          <a href="#"><li>&#8594</li></a>
+          <a href="realizacje3.html"><li>&#8592</li></a>
+          <a href="realizacje.html"><li>1</li></a>
+          <a href="realizacje2.html"><li>2</li></a>
+          <a href="realizacje3.html"><li>3</li></a>
+          <a class="is-active" href="#"><li>4</li></a>
+          <a href="realizacje5.html"><li>5</li></a>
+          <a href="realizacje5.html"><li>&#8594</li></a>
         </ul>
 
   
@@ -124,48 +123,48 @@
   
           <div class="row" data-aos="fade-up">
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-1.jpg">
-                      <img src="assets/img/portfolio/portfolio-1.jpg" alt="Park">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-29.jpg">
+                      <img src="assets/img/portfolio/portfolio-29.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-2.jpg">
-                      <img src="assets/img/portfolio/portfolio-2.jpg" alt="Bridge">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-30.jpg">
+                      <img src="assets/img/portfolio/portfolio-30.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-12 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-3.jpg">
-                      <img src="assets/img/portfolio/portfolio-3.jpg" alt="Tunnel">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-31.jpg">
+                      <img src="assets/img/portfolio/portfolio-31.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-4.jpg">
-                      <img src="assets/img/portfolio/portfolio-4.jpg" alt="Coast">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-32.jpg">
+                      <img src="assets/img/portfolio/portfolio-32.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-5.jpg">
-                      <img src="assets/img/portfolio/portfolio-5.jpg" alt="Rails">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-33.jpg">
+                      <img src="assets/img/portfolio/portfolio-33.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-6.jpg">
-                      <img src="assets/img/portfolio/portfolio-6.jpg" alt="Traffic">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-34.jpg">
+                      <img src="assets/img/portfolio/portfolio-34.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-7.jpg">
-                      <img src="assets/img/portfolio/portfolio-7.jpg" alt="Rocks">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-35.jpg">
+                      <img src="assets/img/portfolio/portfolio-35.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-8.jpg">
-                      <img src="assets/img/portfolio/portfolio-8.jpg" alt="Benches">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-36.jpg">
+                      <img src="assets/img/portfolio/portfolio-36.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
               <div class="col-sm-6 col-md-4">
-                  <a class="lightbox" href="assets/img/portfolio/portfolio-9.jpg">
-                      <img src="assets/img/portfolio/portfolio-9.jpg" alt="Sky">
+                  <a class="lightbox" href="assets/img/portfolio/portfolio-37.jpg">
+                      <img src="assets/img/portfolio/portfolio-37.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
           </div>
