realizacje deploy test

--- a/realizacje.html
+++ b/realizacje.html
@@ -99,9 +99,6 @@
     <!-- ======= Portfolio Section ======= -->
    
 
-
-    <!--Another portfolio section / TEST-->
-
     <div class="container">
 
       <div class="pagination p1 justify-content-center" data-aos="fade-up">
@@ -114,11 +111,8 @@
           <a href="realizacje5.html"><li>5</li></a>
           <a href="realizacje2.html"><li>&#8594</li></a>
         </ul>
-
-  
       </div>
 
-      
       <div class="tz-gallery container">
   
           <div class="row" data-aos="fade-up">
@@ -176,7 +170,7 @@
     
 
 
-    <!--END of test portfolio-->
+    <!--END of portfolio section-->
 
   </main><!-- End #main -->
 
