--- a/o-nas.html
+++ b/o-nas.html
@@ -139,7 +139,7 @@
 
     
 
-    <!-- ======= Our Skills Section ======= -->
+    <!-- ======= Our Skills Section ======= 
     <section id="skills" class="skills">
       <div class="container">
 
@@ -203,7 +203,7 @@
         </div>
 
       </div>
-    </section><!-- End Our Skills Section -->
+    </section>End Our Skills Section -->
 
     <!-- ======= Our Clients Section ======= -->
     <section id="clients" class="clients">
