--- a/realizacje5.html
+++ b/realizacje5.html
@@ -146,6 +146,11 @@
                       <img src="assets/img/portfolio/portfolio-42.jpg" alt="bramfeld_portfolio">
                   </a>
               </div>
+              <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="assets/img/portfolio/portfolio-43.jpg">
+                    <img src="assets/img/portfolio/portfolio-43.jpg" alt="bramfeld_portfolio">
+                </a>
+            </div>
               
           </div>
   
